# SDGP-CS-135

./: .env  .gitignore  CONTRIBUTING.md  GIT_OPERATIONS.md  README.md  index.js  package.json
backend/: .gitignore  eslint.config.mjs  index.js  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/src/: app.ts  (+1 more)
config/: jwt.js
controllers/: auth.service.js
create-plugin-template/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
docker/: docker.txt
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.node.json
marketing-website/: .gitignore
middleware/: auth.middleware.js
my-vite-app/: README.md  package.json  vite.config.ts
plugin-build-tool/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
proxy/: index.js  package-lock.json
react-new/: package-lock.json  package.json
routes/: protected.routes.js  whatsapp.routes.js
services/: whatsapp.service.js
src/: App.tsx  TestLayout.tsx
system-core/: package-lock.json  package.json  vite.config.ts
system-core/ai_backend/: package.json  pyproject.toml
system-core/ai_backend/ai_backend/: asgi.py  run.py  wsgi.py
system-core/ai_backend/api/: serializers.py  text_extract.py  urls.py  views.py
system-core/ai_backend/api/services/: huggingface_service.py
test-dynamic-file-loading/: package-lock.json  package.json  temp-worker.ts  tsconfig.app.json
tools/: index_f.js
utils/: logger.js  validators.js
vite-plugin-process-plugin-conf/: package-lock.json  package.json  tsconfig.json
(+798 files in other folders)
